Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanText.quorum
text t = "Something!"
boolean b = t